--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,18 @@
 {
     "name": "netgen/hideuntildate",
-    "type": "netgen-legacy-extension",
+    "description": "Simple workflow for scheduling content to be revealed in eZ Publish",
+    "type": "ezpublish-legacy-extension",
+    "license": "GPL-2.0-only",
+    "authors": [
+        {
+            "name": "Mugo Web",
+            "homepage": "https://www.mugo.ca"
+        }
+    ],
     "require": {
-        "netgen/netgen-legacy-installer": "*"
+        "ezsystems/ezpublish-legacy-installer": "^2.0.4"
+    },
+    "extra": {
+        "ezpublish-legacy-extension-name": "hideuntildate"
     }
 }
